2012-05-15  Andrea Del Prete  <andrea.delprete@iit.it>
    * src\libYARP_math\include\yarp\math\SVD.h
    * src\libYARP_math\src\SVD.cpp 
    * src\libYARP_math\harness\svdTest.cpp
    Add methods for damped pseudo-inverse, range projection matrix, 
    nullspace projection matrix and related tests.

2012-05-14 Lorenzo Natale <lorenzo.natale@iit.it>
        * src/libYARP_dev/src/IEncodersTimedImpl.cpp: small bug 
          mapping between encoders to angles

2012-05-11  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* example/swig/yarp.i: apply patch from Lars to fix Java bindings
	after recent reorganization of control board interfaces
	[thanks Lars Schillingmann]

2012-05-05  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/carriers/priority_carrier/PriorityCarrier.cpp: create a 
	stub for a modifying carrier that will choose messages based on
	priority levels. [thanks Ali Paikan] [thanks Lorenzo Natale]

2012-05-04  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/carriers/bayer_carrier/CMakeLists.txt: make visual studio 
	accept libdc1394 code, however begrudgingly [thanks Giorgio Metta]

	* src/idls/thrift/CMakeLists.txt: make visual studio accept
	thrift code, however begrudgingly [thanks Giorgio Metta]

2012-05-03 Lorenzo Natale <lorenzo.natale@iit.it>
    * RFModule: signal handling anticipated within the constructor
    in order to catch possible ctrl-c also during the configure() method.

2012-05-03 Lorenzo Natale <lorenzo.natale@iit.it>
    * Following Gaze Interface change tagging version number: 2.3.17
	
2012-05-02  Andrea Del Prete  <andrea.delprete@iit.it>
    * src/libYARP_sig/src/Matrix.cpp
    * src/libYARP_sig/harness/MatrixTest.cpp
    Fix bug in method Matrix::read and modify related test.
    
2012-05-02  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/idls/thrift: merge from https://github.com/paulfitz/yarp_thrift
	This is a basic thrift-based IDL, now available as an optional