@@ -364,7 +364,7 @@ namespace yarp {
 #endif /* ifndef CYGWIN */
 
 
-#ifdef __LINUX__
+#ifdef __linux__
 #ifndef YARP2_LINUX
 #define YARP2_LINUX
 #endif
